<resources>
    <string name="app_name">MobileP2</string>
    <string name="TeamB">Team B</string>
    <string name="TeamA">Team A</string>
    <string name="three1_button">+3 Points</string>
    <string name="two1_button">+2 Points</string>
    <string name="free1_button">Free Throw</string>
    <string name="three2_button">+3 Points</string>
    <string name="two2_button">+2 Points</string>
    <string name="free2_button">Free Throw</string>
    <string name="reset_button">Reset</string>
    <string name="save_button">Save</string>
    <string name="display_button">Display</string>
    <string name="gg_button">Good Game!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>